@@ -1,15 +1,23 @@
+# all.tcl --
 #
-# source all tests.
+# This file contains a top-level script to run all of the ttk
+# tests.  Execute it by invoking "source all.tcl" when running tktest
+# in this directory.
 #
-package require tcltest 2.1
+# Copyright (c) 2007 by the Tk developers.
+#
+# See the file "license.terms" for information on usage and redistribution
+# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
+#
+# RCS: @(#) $Id: all.tcl,v 1.2 2007/09/18 10:39:52 patthoyts Exp $
 
-package require Tk 8.5 ;# This is the Tk test suite; fail early if no Tk!
-
-tcltest::configure -testdir [file join [pwd] [file dirname [info script]]]
-
-eval tcltest::configure $::argv
+package require Tcl 8.5
+package require tcltest 2.2
+package require Tk ;# This is the Tk test suite; fail early if no Tk!
+tcltest::configure {*}$argv
+tcltest::configure -testdir [file normalize [file dirname [info script]]]
+tcltest::configure -loadfile \
+    [file join [file dirname [tcltest::testsDirectory]] constraints.tcl]
+tcltest::configure -singleproc 1
 tcltest::runAllTests
 
-if {![catch { package present Tk }]} {
-	destroy .
-}
