@@ -1,3 +1,9 @@
+2007-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/all.tcl:     Made ttk/all.tcl be the same as tk's
+	* tests/ttk/all.tcl: all.tcl and make use of file normalize 
+	                     (bugs noted by mjanssen and GPS with msys)
+
 2007-09-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/makefile.vc: Add crt flags for tkStubLib now it uses
